--- a/00_Article_Merge.tex
+++ b/00_Article_Merge.tex
@@ -8,6 +8,6 @@
 
 \include{01_Article_MainText}
 \include{02_Article_Supplementary}
-\include{03_Article_SupplementaryVideos}
+%\include{03_Article_SupplementaryVideos}
 
 \end{document}
